--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,16 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: 'lato', sans-serif;
 }
 
 /* Header */
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: 'oswald', sans-serif;
 }
 
 /* Main content */
