--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ h1 {
     list-style: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -93,4 +93,30 @@ main {
 /* Footer */
 footer {
     background-color: orange;
+}
+
+/* Media  query: tablets and larger (768px and up)*/
+@media screen and (min-width: 768px) {
+
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu>li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
 }
