add font awesome and first footer link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ footer {
     background-color: orange;
 }
 
-/* Media  query: tablets and larger (768px and up)*/
+/* Media  query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
     /* Header */
@@ -133,9 +133,9 @@ footer {
 
 }
 
-/* Media  query: laptops and larger (992px and up)*/
+/* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
-            border-bottom: 1px solid #3a3a3a;
+        border-bottom: 1px solid #3a3a3a;
     }
 }
