--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ main {
 
 /* Footer */
 footer {
-    background-color: orange;
+    background-color: #ffffff;
 }
 
 /* Media  query: tablets and larger (768px and up) */
