styled sign up page for lager devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,28 @@ hr {
     #photos {
         column-count: 3;
     }
+
+    /* Sign up */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    #text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
